Changed border on buttons to fix glitch in Outlook 07 - 13. Added some space around footer on mobile.

--- a/src/assets/scss/_ink-override.scss
+++ b/src/assets/scss/_ink-override.scss
@@ -63,7 +63,7 @@ table.large-button td {
   width: auto !important;
   text-align: center;
   background: $bat-color-pillar-box;
-  border: 0;
+  border: 1px solid $bat-color-pillar-box;
   color: #ffffff;
   padding: 12px 0;
 }
