--- a/src/assets/scss/media-queries.scss
+++ b/src/assets/scss/media-queries.scss
@@ -71,19 +71,30 @@
   }
   // override hardcoded height on strapline
   table[class="body"] .mod-strapline-td {
-	height: auto !important;
+    height: auto !important;
   }
 
   table[class="body"] .mod-strapline-img, table[class="body"] .mod-banner-img {
-  	width: 90% !important;
+    width: 90% !important;
   }
 
-	table[class="body"] .mod-booknow-a {
-		padding-top: 0 !important;
-	}
-	
-	table[class="body"] .header-bat-logo-img {
-		margin-left:5% !important;
-	}
+  table[class="body"] .mod-booknow-a {
+    padding-top: 0 !important;
+  }
+
+  table[class="body"] .header-bat-logo-img {
+    margin-left:5% !important;
+  }
+
+  table[class="body"] td.footer-text {
+    padding: 0 $base-padding !important;
+  }
+  
+  table[class="body"] table.columns td.sub-columns,
+table[class="body"] table.column td.sub-columns,
+table[class="body"] table.columns td.sub-column,
+table[class="body"] table.column td.sub-column {
+  padding-left: 10px !important;
+}
 
 }
